<resources>
    <string name="app_name">WorldTrade</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="dontHaveAccount">Don\'t Have An Account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="searchHere">Search Here</string>
    <string name="categories">Categories</string>
    <string name="seeAll">See All</string>
    <string name="settings">Settings</string>
    <string name="add_product">Add Product</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="phone">Phone</string>
    <string name="products">Products</string>
    <string name="alreadyHaveAccount">Already Have an Account?</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>