<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_add_product"
                    android:icon="@drawable/baseline_add_circle_outline_24"
                    android:title="@string/add_product"/>
                <item
                    android:id="@+id/nav_products"
                    android:icon="@drawable/baseline_shopping_cart_24"
                    android:title="@string/products"/>
            </group>
        </menu>
    </item>
    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings1"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_add_product1"
                    android:icon="@drawable/baseline_add_circle_outline_24"
                    android:title="@string/add_product"/>
                <item
                    android:id="@+id/nav_products1"
                    android:icon="@drawable/baseline_shopping_cart_24"
                    android:title="@string/products"/>
            </group>
        </menu>
    </item>
</menu>