<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="10dp"
      >

      <EditText
          android:id="@+id/editTextText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/search_edit_text"
          android:drawableLeft="@android:drawable/ic_menu_search"
          android:ems="10"
          android:hint="@string/searchHere"
          />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="wrap_content"
          android:layout_height="128dp"
          android:src="@drawable/homebanner" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    android:backgroundTint="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/categories"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/seeAll"
        android:textSize="15sp"
        android:id="@+id/see_all_text_view"
        android:layout_gravity="center"
        android:layout_marginLeft="200dp"
        tools:ignore="RtlHardcoded" />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>

      <ImageView
          android:id="@+id/imageView8"
          android:layout_width="match_parent"
          android:layout_height="147dp"
          android:src="@drawable/banner" />

  </LinearLayout>

</FrameLayout>